--- a/package.json
+++ b/package.json
@@ -1,11 +1,43 @@
 {
-  "name": "brenna-photo-app-photo-manager",
+  "name": "brenna-photo-photo-manager",
   "version": "1.0.0",
   "description": "An app for managing folders and photos in the api",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "skuttleman@gmail.com",
+  "dependencies": {
+    "axios": "^0.11.0",
+    "babel-eslint": "^5.0.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-1": "^6.5.0",
+    "babelify": "^7.3.0",
+    "del": "^2.2.2",
+    "eslint": "<2.3.0",
+    "fun-util": "^0.12.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-sass": "^2.3.2",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "react": "^0.14.7",
+    "react-addons-css-transition-group": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.3.0",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^4.0.0",
+    "redux": "^3.2.1",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.17.5"
+  },
+  "scripts": {
+    "build": "node_modules/gulp/bin/gulp.js build",
+    "dev": "export STATIC_FOLDER=build && bin/pull.sh && node_modules/gulp/bin/gulp.js server",
+    "dev:simulator": "export STATIC_FOLDER=build && bin/pull.sh && node_modules/gulp/bin/gulp.js server --simulator=../simulator",
+    "start": "npm run build && bin/pull.sh && bin/serve.sh build"
+  },
   "license": "ISC"
 }
