--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.5.0",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.17.5",
     "del": "^2.2.2",
     "eslint": "<2.3.0",
     "fun-util": "^0.12.0",
@@ -29,9 +30,6 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.2.1",
     "vinyl-source-stream": "^1.1.0"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.17.5"
   },
   "scripts": {
     "build": "node_modules/gulp/bin/gulp.js build",
